--- a/bootstrap_freelancer/index.html
+++ b/bootstrap_freelancer/index.html
@@ -5,9 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
 </head>
 <body>
+    <header class="py-2">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary p-2" data-bs-theme="dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">CONTACT</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+
+    <section id="jumbotron" class="py-4 bg-success">
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <div class="col-8">
+                    <img class="rounded-circle w-25" src="./img/avatar.svg" alt="">
+                    <h1>START BOOTSTRAP</h1>
+                    <div id="divider"><hr></div>
+                    <div id="jobs">
+                        <ul class="list-group list-group-horizontal list-unstyled d-flex justify-content-center gap-1">
+                            <li>GRAPHIC ARTIST</li>
+                            <li>-</li>
+                            <li>WEB DESIGNER</li>
+                            <li>-</li>
+                            <li>ILLUSTRATOR</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     
 </body>
 </html>
