--- a/bootstrap_freelancer/index.html
+++ b/bootstrap_freelancer/index.html
@@ -6,13 +6,14 @@
         <title>Document</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
                 <div class="container">
                     <div class="d-flex justify-content-between w-100">
-                        <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+                        <a class="navbar-brand" href="#"><strong>START BOOTSTRAP</strong></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
@@ -22,10 +23,10 @@
                             <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link active" href="#">ABOUT</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link active" href="#">CONTACT</a>
                             </li>
                         </ul>
                         </div>
@@ -36,26 +37,22 @@
 
         <section id="jumbotron" class="py-5 text-light bg_green">
             <div class="container text-center">
-                <div class="row justify-content-center">
-                    <div class="col-8">
-                        <img class="rounded-circle mb-3" style="min-width: 215px; max-width: 25%;" src="./img/avatar.svg" alt="">
-                        <h1>START BOOTSTRAP</h1>
-                        <!-- Star -->
-                        <div class="d-flex justify-content-center gap-2">
-                            <div class="bar">----</div>
-                            <div class="star">stella</div>
-                            <div class="bar">----</div>
-                        </div>
-                        <div id="jobs">
-                            <ul class="list-group list-group-horizontal list-unstyled d-flex justify-content-center flex-nowrap gap-1">
-                                <li class="flex-shrink-0">GRAPHIC ARTIST</li>
-                                <li>-</li>
-                                <li class="flex-shrink-0">WEB DESIGNER</li>
-                                <li>-</li>
-                                <li class="flex-shrink-0">ILLUSTRATOR</li>
-                            </ul>
-                        </div>
-                    </div>
+                <img class="rounded-circle mb-3" style="min-width: 215px; max-width: 25%;" src="./img/avatar.svg" alt="">
+                <h1>START BOOTSTRAP</h1>
+                <!-- Star -->
+                <div class="d-flex justify-content-center align-items-center gap-2 mb-2">
+                    <div class="bar bg_white"></div>
+                    <div class="star"><i class="fa fa-star" aria-hidden="true"></i></div>
+                    <div class="bar bg_white"></div>
+                </div>
+                <div id="jobs">
+                    <ul class="list-group list-group-horizontal list-unstyled d-flex justify-content-center flex-nowrap gap-1">
+                        <li class="flex-shrink-0">GRAPHIC ARTIST</li>
+                        <li>-</li>
+                        <li class="flex-shrink-0">WEB DESIGNER</li>
+                        <li>-</li>
+                        <li class="flex-shrink-0">ILLUSTRATOR</li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -64,19 +61,19 @@
             <div class="container text-center">
                 <h2>PORTFOLIO</h2>
                 <!-- Star -->
-                <div class="d-flex justify-content-center gap-2">
-                    <div class="bar">----</div>
-                    <div class="star">stella</div>
-                    <div class="bar">----</div>
+                <div class="d-flex justify-content-center align-items-center gap-2 mb-2">
+                    <div class="bar bg_black"></div>
+                    <div class="star"><i class="fa fa-star" aria-hidden="true"></i></div>
+                    <div class="bar bg_black"></div>
                 </div>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 gx-3 row-gap-3 justify-content-center">
-                    <div class="col px-3">colonna</div>
-                    <div class="col px-3">colonna</div>
-                    <div class="col px-3">colonna</div>
+                    <div class="col px-3"><img class="w-100 h-100" src="./img/cabin.png" alt=""></div>
+                    <div class="col px-3"><img class="w-100 h-100" src="./img/cake.png" alt=""></div>
+                    <div class="col px-3"><img class="w-100 h-100" src="./img/circus.png" alt=""></div>
 
-                    <div class="col px-3">colonna</div>
-                    <div class="col px-3">colonna</div>
-                    <div class="col px-3">colonna</div>
+                    <div class="col px-3"><img class="w-100 h-100" src="./img/game.png" alt=""></div>
+                    <div class="col px-3"><img class="w-100 h-100" src="./img/safe.png" alt=""></div>
+                    <div class="col px-3"><img class="w-100 h-100" src="./img/submarine.png" alt=""></div>
                 </div>
             </div>
         </section>
@@ -86,26 +83,26 @@
                 <h2>ABOUT</h2>
 
                 <!-- Star -->
-                <div class="d-flex justify-content-center gap-2">
-                    <div class="bar">----</div>
-                    <div class="star">stella</div>
-                    <div class="bar">----</div>
+                <div class="d-flex justify-content-center align-items-center gap-2 mb-2">
+                    <div class="bar bg_white"></div>
+                    <div class="star"><i class="fa fa-star" aria-hidden="true"></i></div>
+                    <div class="bar bg_white"></div>
                 </div>
 
                 <div class="row text-start justify-content-center">
                     <div class="col-8 col-md-6 col-lg-8">
                       <div class="row row-cols-1 row-cols-md-2">
                         <div class="col">
-                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam dolorum nisi pariatur doloribus error provident a tempora nulla laboriosam blanditiis qui ea quaerat tempore odio iusto quidem quae, sit quo.</p>
+                          <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
                         </div>
                         <div class="col">
-                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam dolorum nisi pariatur doloribus error provident a tempora nulla laboriosam blanditiis qui ea quaerat tempore odio iusto quidem quae, sit quo.</p>
+                          <p>Whether you're a student lookikng to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                         </div>
                       </div>
                     </div>
                 </div>
 
-                <div id="btn_download" class="btn btn-outline-light mt-4">Download</div>
+                <button id="btn_download" class="btn btn-outline-light mt-4 "><i class="fa fa-download" aria-hidden="true"></i> Download</button>
             </div>
         </section>
 
@@ -114,10 +111,10 @@
                 <h2 class="text-center">CONTACT ME</h2>
 
                 <!-- Star -->
-                <div class="d-flex justify-content-center gap-2">
-                    <div class="bar">----</div>
-                    <div class="star">stella</div>
-                    <div class="bar">----</div>
+                <div class="d-flex justify-content-center align-items-center gap-2 mb-2">
+                    <div class="bar bg_black"></div>
+                    <div class="star"><i class="fa fa-star" aria-hidden="true"></i></div>
+                    <div class="bar bg_black"></div>
                 </div>
 
                 <div class="row d-flex justify-content-center">
@@ -149,7 +146,7 @@
 
         <section id="contacts" class="py-5 bg_navy text-light">
             <div class="container text-center align-items-center">
-                <div class="row row-gap-3 row-gap-">
+                <div class="row row-gap-5">
                     <div class="col-md-6 col-lg-4">
                         <h6>LOCATION</h6>
                         <p>2215 John Daniel Drive Clark, MO 54243</p>
@@ -157,11 +154,11 @@
 
                     <div class="col-md-6 col-lg-4">
                         <h6>AROUND THE WEB</h6>
-                        <ul class="list-group list-group-horizontal list-unstyled d-flex justify-content-center gap-1">
-                            <li>F</li>
-                            <li>G</li>
-                            <li>T</li>
-                            <li>In</li>
+                        <ul class="list-group list-group-horizontal list-unstyled d-flex justify-content-center gap-3">
+                            <li class="social_icon rounded-circle border border-white"><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                            <li class="social_icon rounded-circle border border-white"><i class="fa fa-google-plus" aria-hidden="true"></i></li>
+                            <li class="social_icon rounded-circle border border-white"><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                            <li class=" social_icon rounded-circle border border-white"><i class="fa fa-linkedin" aria-hidden="true"></i></li>
                         </ul>
                     </div>
 
@@ -174,7 +171,7 @@
         </section>
 
         <footer class="py-4 text-center bg-body-tertiary text-light" data-bs-theme="dark"">
-            <span>Copyright Your Website 2019</span>
+            <span>Copyright &copy; Your Website 2019</span>
         </footer>
 
     </body>
